--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,60 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #000;
+  font-size: 16px;
 }
+
+h1 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+
+h2 {
+  font-size: 1.125rem;
+  margin-bottom: 10px;
+}
+
+h1,
+h2 {
+  text-align: center;
+}
+
+h1, 
+h2,
+p,
+input, textarea {
+  font-family: sans-serif;
+}
+
+button {
+  background-color: #A457BF;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  color: #fff;
+  font-weight: bold;
+  letter-spacing: 1px;
+  padding: 6px 10px;
+}
+
+button:hover {
+  background-color: #B578CB;
+  border: 1px solid #FFFFcc;
+  color: #FFFFcc;
+}
+
+button:active {
+  border: 1px solid #ff0;
+  color: #ff0;
+}
+
+/* Color Theme Swatches in Hex */
+.Sling-Smart-part-2-1-hex { color: #0006BF; }
+.Sling-Smart-part-2-2-hex { color: #000000; }
+.Sling-Smart-part-2-3-hex { color: #2B190E; }
+.Sling-Smart-part-2-4-hex { color: #A457BF; }
+.Sling-Smart-part-2-5-hex { color: #38024D; }
